--- a/src/style.css
+++ b/src/style.css
@@ -1,106 +1,158 @@
-*{
+* {
     margin: 0;
 }
 
-.main{
+.main {
     height: 100vh;
     width: 100vw;
-    background: url(https://c1.wallpaperflare.com/preview/850/591/749/books-pages-story-stories.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background: url(https://c1.wallpaperflare.com/preview/850/591/749/books-pages-story-stories.jpg) no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.box{
+
+.box {
     height: 500px;
-    width: 950px;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 5px 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
+    width: 90%;
+    max-width: 950px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 5px 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     border-radius: 20px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    border: 1px solid rgba(255, 255, 255, 0.18);
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* justify-content: center; */
-    gap: 80px;
-    padding-top: 80px;
-   
+    gap: 40px;
+    padding: 40px;
 }
-h1{
+
+h1 {
     background-image: url(https://i.makeagif.com/media/1-19-2017/zwNLUg.gif);
     background-size: cover;
     color: transparent;
     -moz-background-clip: text;
     -webkit-background-clip: text;
     text-transform: uppercase;
-    font-size: 50px;
+    font-size: 3em;
     font-style: oblique;
-    
-    /* margin: 10px 0; */
-  }
-.dropdown{
-    height: 70px;
-    width: 400px;
+    text-align: center;
+}
+
+.dropdown {
+    height: 50px;
+    width: 80%;
+    max-width: 400px;
     border-radius: 20px;
-    background-color: rgb(204,188,173);
+    background-color: rgb(204, 188, 173);
     color: rgb(133, 120, 120);
-    font-size: 30px;
+    font-size: 1.2em;
     outline: none;
     border: 1px solid silver;
     text-transform: capitalize;
     font-style: italic;
     font-family: 'Times New Roman', Times, serif;
-  }
-  
-  .box1{
-    height: 550px;
-    width: 900px;
-    background-color: burlywood;
-    background: rgba( 255, 255, 255, 0.25 );
-    box-shadow: 5px 8px 32px 0 rgba( 31, 38, 135, 0.37 );
-    backdrop-filter: blur( 4px );
-    -webkit-backdrop-filter: blur( 4px );
+}
+
+.box1 {
+    height: 100%;
+    max-width: 900px;
+    background: rgba(255, 255, 255, 0.25);
+    box-shadow: 5px 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     border-radius: 20px;
-    border: 1px solid rgba( 255, 255, 255, 0.18 );
-    
+    border: 1px solid rgba(255, 255, 255, 0.18);
 }
-.quote{
- 
-    padding: 50px;
-    font-size: 30px ;
+
+.quote {
+    padding: 20px;
+    font-size: 1.5em;
     font-style: italic;
+    text-align: center;
 }
-.author{
-    font-size: 23px ;
+
+.author {
+    font-size: 1.2em;
     font-style: italic;
     text-align: right;
+    padding-right: 20px;
 }
-.back{
- padding: 20px;
- outline: none;
- border: none;
- background-color: transparent;
+
+.back {
+    padding: 10px;
+    outline: none;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    font-size: 1em;
 }
-.content{
-    height: 500px;
-    width: 900px;
+
+.content {
+    height: 100%;
+    max-width: 900px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 60px;
+    gap: 20px;
 }
 
-.btn{
+.btn {
     height: 50px;
     width: 50px;
     border-radius: 50%;
     background-color: rgb(203, 70, 70);
     outline: none;
     border: none;
-
+    cursor: pointer;
 }
 
+/* Responsive adjustments */
+
+@media (max-width: 768px) {
+    .box {
+        gap: 20px;
+        padding: 20px;
+    }
+    h1 {
+        font-size: 2em;
+    }
+    .dropdown {
+        height: 40px;
+        font-size: 1em;
+    }
+    .quote {
+        padding: 15px;
+        font-size: 1.2em;
+    }
+    .author {
+        font-size: 1em;
+    }
+    .content {
+        gap: 20px;
+    }
+}
+
+@media (max-width: 480px) {
+    h1 {
+        font-size: 1.5em;
+    }
+    .dropdown {
+        width: 90%;
+        height: 35px;
+        font-size: 0.9em;
+    }
+    .quote {
+        padding: 10px;
+        font-size: 1em;
+    }
+    .author {
+        font-size: 0.9em;
+    }
+    .btn {
+        height: 40px;
+        width: 40px;
+    }
+}
